themes/yeldirium/source-raw/scss/generic/_text.scss
a {
  color: $font-color-main;
  text-decoration: underline;

  &:visited {
    color: $font-color-main;
  }

  &:hover {
    color: $font-color-link-hover;
  }
}

@for $i from 1 through 6 {
  h#{$i} {
    color: $font-color-main;
  }
}

.category-list, .tag-list, .archive-list {
  @include list;
}

.font-light {
  font-weight: 300;
}

code {
  padding: 0 2px;

  background-color: $font-background-code;

  font-size: 0.9rem;
}

